# irix-lt-client

./: .gitignore  README.md  configure.ac
src/: Makefile.am
src/irixltclient/: Makefile.am  irixltclient.cpp  torrent_view.hpp
