AC_PREREQ(2.65)
AC_INIT([irixltclient],
        [0.1.0],
        [daniel.hams@gmail.com])

AC_SUBST(ACLOCAL_AMFLAGS, "-I macros")

AC_CONFIG_SRCDIR(src)
AC_CONFIG_MACRO_DIR(macros)
AC_CONFIG_HEADERS(config.h)
AM_INIT_AUTOMAKE([1.9 foreign subdir-objects])

ABI_VERSION=0.1
AC_SUBST(ABI_VERSION)
AC_DEFINE_UNQUOTED(ABI_VERSION, "$ABI_VERSION", [ABI version of the package])
PACKAGE_SUFFIX="-${ABI_VERSION}"
AC_SUBST(PACKAGE_SUFFIX)
AC_DEFINE_UNQUOTED(PACKAGE_SUFFIX, "$PACKAGE_SUFFIX", [Suffix of the package])

AC_STDC_HEADERS
AC_PROG_CC
AC_PROG_CXX
AC_PROG_LIBTOOL
PKG_PROG_PKG_CONFIG

AC_LANG([C++])

LIBRARYONE_VERSION=0.1
AC_SUBST(LIBRARYONE_VERSION)
LIBRARYTWO_VERSION=0.1
AC_SUBST(LIBRARYTWO_VERSION)

PACKAGE_DEPENDENCY_LIST="libtorrent-rasterbar >= $LIBTORRENT_VERSION"
AC_DEFINE_UNQUOTED(PACKAGE_DEPENDENCY_LIST, "$PACKAGE_DEPENDENCY_LIST", [Package dependency list])

PKG_CHECK_MODULES([IRIXLTCLIENT_DEPS], [$PACKAGE_DEPENDENCY_LIST])

AC_OUTPUT([Makefile
src/Makefile
src/irixltclient/Makefile])
